apps/applications/homepage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    name: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/part-of: homelab-infrastructure
